--- a/laravel/package.json
+++ b/laravel/package.json
@@ -6,6 +6,7 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@alpinejs/sort": "^3.15.0",
         "@tailwindcss/vite": "^4.1.11",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
